--- a/backend/.env
+++ b/backend/.env
@@ -4,12 +4,14 @@ PORT=5000
 NODE_ENV=development
 
 # MongoDB Connection
-
-MONGODB_URI=mongodb://localhost:27017/e-ballot
+MONGODB_URI=mongodb://localhost:27017/database_name
 
 
 # JWT Secret for Authentication
 JWT_SECRET="your jwt secret here"
+
+client_URL=
+
 
 
 # Admin Setup (for initial admin user)
