--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
           npm run build
 
       # Optional: Step 6 - Run backend tests (if you have any)
-      # - name: Run backend tests
+      - name: Run backend tests
       #   run: |
       #     cd backend
       #     npm test
