--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,54 +7,87 @@ on:
     branches: [main]
 
 jobs:
-  build-and-deploy:
+  setup:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [18.x]
-
     steps:
-      # Step 1: Checkout the code
       - name: Checkout repository
         uses: actions/checkout@v3
-
-      # Step 2: Setup Node.js
-      - name: Setup Node.js ${{ matrix.node-version }}
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 18.x
 
-      # Step 3: Install backend dependencies
+  install-backend:
+    needs: setup
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18.x
       - name: Install backend dependencies
         run: |
           cd backend
           npm install
 
-      # Step 4: Install frontend dependencies
+  install-frontend:
+    needs: setup
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18.x
       - name: Install frontend dependencies
         run: |
           cd frontend
           npm install
 
-      # Step 5: Build frontend
+  build-frontend:
+    needs: install-frontend
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18.x
+      - name: Install frontend dependencies
+        run: |
+          cd frontend
+          npm install
       - name: Build frontend
         run: |
           cd frontend
           npm run build
 
-      # Optional: Step 6 - Run backend tests (if you have any)
-      # - name: Run backend tests
-      #   run: |
-      #     cd backend
-      #     npm test
+  test-backend:
+    needs: install-backend
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18.x
+      - name: Install backend dependencies
+        run: |
+          cd backend
+          npm install
+      - name: Run backend tests
+        run: |
+          cd backend
+          npm test
 
-      # Step 7: Deploy (optional)
-      # Add your own deployment logic here, for example:
-      # - scp build folder to a server
-      # - trigger render/vercel/netlify webhook
-      # - deploy to Docker/Heroku etc.
-
-      # Example: Echo deployment done
+  deploy:
+    needs: [build-frontend, test-backend]
+    runs-on: ubuntu-latest
+    steps:
       - name: Deployment Placeholder
         run: echo "Deploy step goes here."
