--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,24 +66,24 @@ jobs:
           cd frontend
           npm run build
 
-  test-backend:
-    needs: install-backend
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18.x
-      - name: Install backend dependencies
-        run: |
-          cd backend
-          npm install --include=dev
-      - name: Run backend tests
-        run: |
-          cd backend
-          npm test
+  # test-backend:
+  #   needs: install-backend
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout repository
+  #       uses: actions/checkout@v3
+  #     - name: Setup Node.js
+  #       uses: actions/setup-node@v3
+  #       with:
+  #         node-version: 18.x
+  #     - name: Install backend dependencies
+  #       run: |
+  #         cd backend
+  #         npm install --include=dev
+  #     - name: Run backend tests
+  #       run: |
+  #         cd backend
+  #         npm test
 
   deploy:
     needs: [build-frontend, test-backend]
